cmake_minimum_required (VERSION 3.1)

project (Ant_System)

add_executable(Ant_System Ant_System.cpp)

#find_package(Allegro REQUIRED)
#include_directories(${ALLEGRO_INCLUDE_DIR})
#list(APPEND LINK_LIBS ${ALLEGRO_LIBRARY})
#list(APPEND LINK_LIBS ${ALLEGRO_IMAGE_LIBRARY})
#list(APPEND LINK_LIBS ${ALLEGRO_FONT_LIBRARY})
#list(APPEND LINK_LIBS ${ALLEGRO_TTF_LIBRARY})
#list(APPEND LINK_LIBS ${ALLEGRO_PRIMITIVES_LIBRARY})